// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/Audit/ActionAuditStatut Audite 1`] = `
<div
  className="fr-px-1w fr-mt-2w w-full bg-[#e8edff]"
>
  <div
    className="w-52"
  >
    <button
      aria-expanded={false}
      aria-label="ouvrir le menu"
      className="flex items-center w-full p-2 text-left text-sm w-full"
      data-test="action-audit-statut"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onPointerDown={[Function]}
    >
      <span
        className="mr-auto"
      >
        <span
          className="fr-badge fr-badge--success fr-badge--no-icon fr-text--xs"
        >
          Audité
        </span>
      </span>
      <span
        className="fr-fi-arrow-down-s-line mt-1 scale-90 ml-auto"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Audit/ActionAuditStatut En Cours 1`] = `
<div
  className="fr-px-1w fr-mt-2w w-full bg-[#e8edff]"
>
  <div
    className="w-52"
  >
    <button
      aria-expanded={false}
      aria-label="ouvrir le menu"
      className="flex items-center w-full p-2 text-left text-sm w-full"
      data-test="action-audit-statut"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onPointerDown={[Function]}
    >
      <span
        className="mr-auto"
      >
        <span
          className="fr-badge fr-badge--info fr-badge--no-icon fr-text--xs"
        >
          Audit en cours
        </span>
      </span>
      <span
        className="fr-fi-arrow-down-s-line mt-1 scale-90 ml-auto"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Audit/ActionAuditStatut Non Audite 1`] = `
<div
  className="fr-px-1w fr-mt-2w w-full bg-[#e8edff]"
>
  <div
    className="w-52"
  >
    <button
      aria-expanded={false}
      aria-label="ouvrir le menu"
      className="flex items-center w-full p-2 text-left text-sm w-full"
      data-test="action-audit-statut"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onPointerDown={[Function]}
    >
      <span
        className="mr-auto"
      >
        <span
          className="fr-badge fr-badge--warning fr-badge--no-icon fr-text--xs"
        >
          Non audité
        </span>
      </span>
      <span
        className="fr-fi-arrow-down-s-line mt-1 scale-90 ml-auto"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/Audit/ActionAuditStatut Read Only 1`] = `
<div
  className="fr-px-1w fr-mt-2w w-full bg-[#e8edff]"
>
  <div
    className="fr-py-1w"
    data-test="action-audit-statut-ro"
  >
    <span
      className="fr-badge fr-badge--success fr-badge--no-icon fr-text--xs"
    >
      Audité
    </span>
  </div>
</div>
`;
